* Rewrote the _checkLargeLine() function
* Added rudimentary progress reporting, invoked with the parameter --progress
* Edited Style errors for clarity
* Included regex in the error report for appropriate types
* Errors are now described in much greater detail and more consistent language
* Removed 'old : ' and 'new : ' prefixes from constructor name hints
* New output type - html console


Thanks a lot to Justin Creasey and Adam King

Version 0.9.8
-------------
* Issue 3:	Check for unreachable code

Version 0.9.7
-------------
* Deprecation of long $HTTP_*_VARS predefined variables
* Configuration of system variables lists
* Issue 10:	Don't blindly remove first 2 chars of file path

Version 0.9.6
-------------
* Corrected the inner assignement rule (wasn't detecting the end of a control statement if no brackets).
* Corrected the file exclusion list.
* Corrected a bug with nextToken at the end of a file.
* Added the possibility to add exceptions to the checkVariableNaming rule

Version 0.9.5
-------------
* Corrected a bug with @SuppressWarnings on a class.

Version 0.9.4
-------------
* Add  __invoke and __callStatic to the special functions.

Version 0.9.3
-------------
* Refactoring of the indentation check (thanks to Charles Marion). The "noTabs" rule is replaced by the "indentation" rule.
* Reactivation of the "noSpaceAfterControlStmt" rule.
* Correction of a bug with multiple output files. 
* Added a rule for the naming of protected functions. 

Version 0.9.2
-------------
* Multiple output files (separated by a comma in the --format command line parameter)
  
Version 0.9.1
-------------
* Possibility to scan multiple source directories (separated by a comma in the --src command line parameter)
                        
Version 0.9
-------------
* Dependency on lib_xsl removed
* Documentation updated to link to the new project home (http://code.google.com/p/phpcheckstyle/)
* HTML Report validated with W3C validator, HTML characters escaped